# tailspin

./: Cargo.toml
example-logs/: example1
src/highlighters/: date_slash.rs  ipv6.rs  mod.rs  process.rs  time.rs
src/theme/: defaults.rs  mapper.rs
