[package]
name = "tailspin"
version = "3.1.0"
edition = "2021"
authors = ["Ben Sadeh"]
description = "A log file highlighter"
repository = "https://github.com/bensadeh/tailspin"
keywords = ["log", "syntax-highlighting", "tail", "less"]
license = "MIT"
rust-version = "1.70"

[[bin]]
path = "src/main.rs"
name = "tspin"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = 'abort'

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
missing-const-for-fn = "deny"
mut_mut = "deny"
similar_names = "deny"
unicode_not_nfc = "deny"
enum_glob_use = "deny"
if_not_else = "deny"
items_after_statements = "deny"
used_underscore_binding = "deny"
panic = "deny"
cast_possible_wrap = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.23"
color-eyre = "0.6.3"
ctrlc = "3.4.5"
linemux = "0.3.0"
nu-ansi-term = "0.50.1"
once_cell = "1.19.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
shellexpand = "3.1.0"
tempfile = "3.12.0"
terminal_size = "0.3.0"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
